<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- README::DO NOT TRANSLATE THIS -->
    <!-- Background story: SEO SERP Tracker is smarthphone application which allows you to check -->
    <!-- how your website ranks in Google for selected keyword. For example www.cnn.com is first for keyword "news" -->


    <!--
    TUTORIAL FOR TRANSLATING: for example:  <string name="profile_edit_page_delete">Delete</string> you have to translate ONLY 
    the part inside <string..></string> so for given example you have to translate the "delete" word only to given language. This 
    applies to all translations below. Please use same letter case as provided below 
    -->
    <!-- README END: DO NOT TRANSLATE THIS -->

    <string name="profile_edit_page_delete">Delete</string>
    <string name="there_are_no_email_clients_installed_">There are no email clients installed.</string>
    <string name="spinner_default_selection">Select a website...</string>
    <string name="no_websites_to_manage_please_add_a_website">No websites to manage. Please add a website</string>
    <string name="no_active_internet_connection_please_check_your_settings">No active network connection. Please check your network settings</string>
    <string name="like_this_app_rate_us_on_android_market_">Like this app? Rate us on Android™ market!</string> <!-- app=application/software program -->
    <string name="sure_">Sure!</string> <!-- postive response -->
    <string name="cancel">Cancel</string> <!-- aborts action -->
    <string name="inspect_dialog_title">Inspecting keywords</string>
    <string name="inspect_dialog_fist_msg">Starting, please wait</string>
    <string name="please_select_a_profile">Please select a profile</string>
    <string name="please_enter_some_keywords">Please enter keywords</string>
    <string name="website_address_is_too_short_or_invalid">Website address is too short or invalid</string>
    <string name="website_added_successfuly">Website add success</string>
    <string name="website_add_failure">Website add failed</string>
    <string name="website_">Website</string> <!-- this message is combined with next one (_succesfully_deleted), EXAMPLE: website {userwebsite} succesfully deleted -->
    <string name="_succesfully_deleted">succesfully deleted</string>
    <string name="delete_failed">Delete failed</string>
    <string name="website_edited_successfuly">Website edit successful</string>
    <string name="website_edit_failure">Website edit failed</string>
    <string name="all_user_data_deleted">All user data deleted</string>
    <string name="run_btton">Find Rankings</string> <!-- main button which finds how selected website ranks in google for user inputed keywords -->
    <string name="menubar_add">Add</string>
    <string name="menubar_manage">Manage</string>
    <string name="menubar_settings">Settings</string>
    <string name="menubar_info">Info</string>
    <string name="address_of_your_website">Address of your website</string>
    <string name="www_example_com">www.example.com</string>
    <string name="keywords_to_track">Keywords to track</string>
    <string name="example_keyword_1_nexample_keyword_2">example keyword 1 \nexample keyword 2 \nexample keyword 3 \n... \nexample keyword n</string> <!-- ATTENTION: \n represents page breaks -->
    <string name="insert">Insert</string>
    <string name="back">Back</string>
    <string name="about_title_news_and_updates">News and Updates</string>
    <string name="address">Address</string> <!-- address of website -->
    <string name="save">Save</string>
    <string name="keyword_">Keyword </string>
    <string name="free_version_limit_7_keywords_per_website">Free version is limited to 7 keywords per website. Would you like to buy the premium version to remove this limitation?</string>
    <string name="google_is_trademark_of_google_inc_this_application_is_built_on_google_custom_search_api_and_does_not_infringe_google_search_terms_of_service_">Google is trademark of Google inc. This application is built on Google Custom Search API and does not infringe Google Search terms of service.</string>
    <string name="search_engine">Search Engine</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="resets_all_application_internal_data">Resets all application internal data</string>
    <string name="legal_information">Legal Information</string>
    <string name="error">Error</string>
    <string name="region">Region</string>
    <string name="yes">Yes</string>
    <string name="OK">OK</string>
    <string name="premium_view_live_ranking">View Live Ranking</string>
    <string name="premium_dialog_title">Extra Information</string>
    <string name="premium_show_anchor_dialog_title">Ranking Link Text (anchor)</string>
    <string name="available_in_the_premium_version_would_you_like_to_buy_the_premium_version_">This feature is avilable in the premium verion. Would you like to buy the premium version to remove this limitation?</string>
    <string name="free_version_supports_only_">Free version supports only </string> <!-- this message is combined with next one (_websites_would ...), EXAMPLE: Free version supports only {number} websites. Would you like to buy the premium version to remove this limitation? -->
    <string name="_websites_would_you_like_to_buy_the_premium_version_to_remove_this_limitation_"> websites. Would you like to buy the premium version to remove this limitation?</string>
    <string name="anchor">ANCHOR</string>
    <string name="preferences_select_mode_option_accurate">Accurate</string>
    <string name="preferences_select_mode_option_fast">Fast</string>
    <string name="preferences_select_browser_unavailable">Unavailable</string>
    <string name="preferences_select_browser_empty">Empty</string>
    <string name="preference_header_browser">Browser</string>
    <string name="preferences_browser_summary">Request results as using selected client</string>
    <string name="preference_mode_summary">Slow &amp; accurate OR fast &amp; inaccurate</string>
    <string name="preference_mode_title">Mode</string>
    <string name="raw_ranking_data_title">Raw Ranking Data</string>
    <string name="premium_dialog_go_to_address">Go to address</string>
    <string name="no_extra_data_to_display_for_selected_keyword">No extra data to display for selected keyword</string>
    <string name="preference_mode_select_warning">!!!WARNING!!!\n\nMode %1$s is 5 times slower.\n\nUse mode %1$s only if you have less than 10 keywords (otherwise it may result in 2 hour temporary ban from Google).\n\n!!!WARNING!!!</string>

</resources>