<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:key="prefMode"
        android:summary="@string/preference_mode_summary"
        android:title="@string/preference_mode_title" >
    </ListPreference>
    <ListPreference
        android:entries="@array/SearchEngines"
        android:entryValues="@array/SearchEngines"
        android:key="prefSearchEngine"
        android:summary="Google™"
        android:title="@string/search_engine" >
    </ListPreference>
    <ListPreference
        android:entries="@array/GoogleLocals"
        android:entryValues="@array/GoogleLocals"
        android:key="prefLocalize"
        android:title="@string/region" >
    </ListPreference>
    <ListPreference
        android:entries="@array/UaKeys"
        android:entryValues="@array/UaKeys"
        android:key="prefUa"
        android:summary="@string/preferences_browser_summary"
        android:title="@string/preference_header_browser" />
    <Preference
        android:key="prefTrunk"
        android:summary="@string/resets_all_application_internal_data"
        android:title="@string/delete_all_data" >
    </Preference>

</PreferenceScreen>